[gd_scene format=3 uid="uid://ckeqfs4ao5qvd"]

[ext_resource type="Script" uid="uid://cb2hisqvr4ogc" path="res://scripts/settings.gd" id="1_5p8wc"]

[node name="Settings" type="Control" unique_id=119162812]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5p8wc")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=211935950]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -117.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer" unique_id=334423762]
visible = false
layout_mode = 2
text = "Fullscreen"

[node name="SFX" type="HBoxContainer" parent="VBoxContainer" unique_id=848019249]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SFX" unique_id=1026992024]
layout_mode = 2
text = "SFX      "

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFX" unique_id=1774524420]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[node name="Music" type="HBoxContainer" parent="VBoxContainer" unique_id=450870476]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Music" unique_id=1817900849]
layout_mode = 2
text = "Music  "

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/Music" unique_id=1091532066]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="VBoxContainer/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
